<resources>
    <string name="app_name">SportsCultBack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="input_too_short">Input Too Short</string>
    <string name="same_teams">Both Teams Have Same Name</string>
    <string name="player_name">Player Name</string>
    <string name="player_contact">Contact</string>
    <string name="upload_id_proof">Upload Id</string>
    <string name="coach_name">Coach Name</string>
    <string name="team_name">Team Name</string>
    <string name="coach_contact">Coach Contact</string>
    <string name="coach_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="add_more_players">Add Players</string>
    <string name="submit">Submit</string>
    <string name="empty_field">"Cannot Be Left Blank</string>

    <string-array name="age_groups">
        <item>Select Age Group</item>
        <item>9yrs - 10yrs</item>
        <item>10yrs - 11yrs</item>
        <item>11yrs - 12yrs</item>
        <item>12yrs - 13yrs</item>
    </string-array>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="auth_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="gmail">Gmail</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="already_a_user">Already a user? </string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="not_already_a_user">Don\'t have an account? </string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
