<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_name"/>

    <EditText
        android:id="@+id/player_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_contact"
        android:inputType="phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Jersey Number"
        android:inputType="number"
        android:maxLength="3"
        android:id="@+id/player_jersey"/>
    <ImageView
        android:id="@+id/id_proof_scan"
        android:layout_width="300dip"
        android:layout_height="300dip"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>
    <Button
        android:id="@+id/upload_id_proof_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/upload_id_proof"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>