<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.sportscult.sportscultback.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="email_sign_in"/>
<!--
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:color="@color/colorAccent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/or"
                    android:textStyle="normal|bold"
                    android:id="@+id/textView2" />

                <View
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="1"/>
            </LinearLayout>
            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_sign_in_button"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

            </android.support.v7.widget.ButtonBarLayout>
-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/not_already_a_user"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/link_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact Officials From SportsCult For Your Account."
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginTop="5dip"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
